# DeployWithMe

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.deploy_builds/036cfc230b/: Dockerfile
.deploy_builds/2dd39dc2bd/: Dockerfile  digits_torch.onnx
.deploy_builds/3164c0ece5/: digits_torchscript.pt
.deploy_builds/36eba25bbd/: Dockerfile  iris_tf.h5  main.py  requirements.txt
.deploy_builds/3a579bfd85/: iris_torch_full.pt
.deploy_builds/3d9e2a3952/: Dockerfile
.deploy_builds/409b852f1d/: Dockerfile
.deploy_builds/410bd7ff77/: main.py
.deploy_builds/45c80f73f4/: handwriting_model.h5  main.py
.deploy_builds/4a7464b0a5/: Dockerfile  iris_torch_full.pt
.deploy_builds/4fb6770f5f/: Dockerfile
.deploy_builds/5d7b5ee5cc/: Dockerfile  main.py
.deploy_builds/666519423a/: Dockerfile  main.py
.deploy_builds/7a8e04c41e/: Dockerfile  requirements.txt
.deploy_builds/8cbe9b967f/: Dockerfile  iris_torch.onnx  main.py  requirements.txt
.deploy_builds/9760af5b21/: main.py
.deploy_builds/a38e0d2f8e/: requirements.txt
.deploy_builds/b0450587a6/: Dockerfile  digits_histgbc.joblib  main.py
.deploy_builds/b7164fc12a/: Dockerfile  RandomForestClassifier.joblib  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
frontend/: index.html  package-lock.json  package.json
scripts/: list_deploy_commands.py  list_dl_deploy_commands.py  train_classical_ml_zoo.py  train_dl_test_models.py  train_new_dl_test_models.py  train_new_ml_test_models.py
trained_models/: manifest.json
(+109 files in other folders)
